--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="alarm_sound">Alarm Sound</string>
     <string name="save">Save</string>
     <string name="alarm">alarm</string>
+    <string name="error">Error</string>
+    <string name="custom_audio_error_descrip">Custom audio not found! Default audio chosen.</string>
     <string-array name="musicLabels">
         <item>Siren 1</item>
         <item>Custom Audio</item>
