Changed package name, fixed dupe service problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="error">Error</string>
     <string name="custom_audio_error_descrip">Custom audio not found! Default audio chosen.</string>
     <string name="reset_to_defaults">Reset To Defaults</string>
+    <string name="vibration">Vibration</string>
     <string-array name="musicLabels">
         <item>Siren 1</item>
         <item>Custom Audio</item>
